<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>org.dbs.sbgb</groupId>
    <artifactId>SpaceBackGroundBuilder</artifactId>
    <version>0.0.1-SNAPSHOT</version>
    <packaging>pom</packaging>


    <name>SpaceBackGroundBuilder</name>
    <description>SpaceBackGroundBuilder</description>

    <properties>
        <java.version>21</java.version>
        <maven.compiler.source>${java.version}</maven.compiler.source>
        <maven.compiler.target>${java.version}</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>

        <spring-boot.version>3.4.13</spring-boot.version>
        <mockito-core.version>5.21.0</mockito-core.version>
        <cucumber-junit-platform-engine.version>7.34.2</cucumber-junit-platform-engine.version>
        <junit-jupiter-engine.version>5.14.1</junit-jupiter-engine.version>
        <assertj-core.version>3.27.6</assertj-core.version>
        <maven-surefire-plugin.version>3.5.4</maven-surefire-plugin.version>
        <jnoise-pipeline.version>4.1.0</jnoise-pipeline.version>
        <logback-classic.version>1.5.27</logback-classic.version>
        <mapstruct.version>1.6.3</mapstruct.version>
        <postgresql.version>42.7.9</postgresql.version>
        <springdoc-openapi-starter-webmvc-ui.version>2.8.15</springdoc-openapi-starter-webmvc-ui.version>
        <jacoco-maven-plugin.version>0.8.12</jacoco-maven-plugin.version>
    </properties>

    <modules>
        <module>sbgb-application</module>
        <module>sbgb-infrastructure</module>
        <module>sbgb-exposition</module>
        <module>sbgb-configuration</module>
        <module>sbgb-cmd</module>
        <module>sbgb-gui</module>
        <module>sbgb-coverage</module>
    </modules>

    <dependencyManagement>
        <dependencies>
            <!-- Module dépendance -->
            <dependency>
                <groupId>org.dbs.sbgb</groupId>
                <artifactId>sbgb-application</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>org.dbs.sbgb</groupId>
                <artifactId>sbgb-infrastructure</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>org.dbs.sbgb</groupId>
                <artifactId>sbgb-exposition</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>org.dbs.sbgb</groupId>
                <artifactId>sbgb-configuration</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>org.dbs.sbgb</groupId>
                <artifactId>sbgb-cmd</artifactId>
                <version>${project.version}</version>
            </dependency>


            <!-- JUnit 5 BOM (avant Spring Boot pour forcer la version) -->
            <dependency>
                <groupId>org.junit</groupId>
                <artifactId>junit-bom</artifactId>
                <version>${junit-jupiter-engine.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>

            <!-- C'est là que nous allons utiliser le POM de Spring Boot -->
            <dependency>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-dependencies</artifactId>
                <version>${spring-boot.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>

            <!-- https://mvnrepository.com/artifact/de.articdive/jnoise-core -->
            <dependency>
                <groupId>de.articdive</groupId>
                <artifactId>jnoise-pipeline</artifactId>
                <version>${jnoise-pipeline.version}</version>
            </dependency>

            <!-- https://mvnrepository.com/artifact/org.postgresql/postgresql -->
            <dependency>
                <groupId>org.postgresql</groupId>
                <artifactId>postgresql</artifactId>
                <version>${postgresql.version}</version>
            </dependency>
            <!-- https://mvnrepository.com/artifact/org.springdoc/springdoc-openapi-starter-webmvc-ui -->
            <dependency>
                <groupId>org.springdoc</groupId>
                <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
                <version>${springdoc-openapi-starter-webmvc-ui.version}</version>
            </dependency>


            <!-- https://mvnrepository.com/artifact/ch.qos.logback/logback-classic -->
            <dependency>
                <groupId>ch.qos.logback</groupId>
                <artifactId>logback-classic</artifactId>
                <version>${logback-classic.version}</version>
            </dependency>

            <!-- Add mapstruct dependency -->
            <dependency>
                <groupId>org.mapstruct</groupId>
                <artifactId>mapstruct</artifactId>
                <version>${mapstruct.version}</version>
            </dependency>

            <!-- https://mvnrepository.com/artifact/org.mapstruct/mapstruct-processor -->
            <dependency>
                <groupId>org.mapstruct</groupId>
                <artifactId>mapstruct-processor</artifactId>
                <version>${mapstruct.version}</version>
            </dependency>


            <!-- Cucumber -->
            <dependency>
                <groupId>io.cucumber</groupId>
                <artifactId>cucumber-java</artifactId>
                <version>${cucumber-junit-platform-engine.version}</version>
                <scope>test</scope>
            </dependency>
            <dependency>
                <groupId>io.cucumber</groupId>
                <artifactId>cucumber-spring</artifactId>
                <version>${cucumber-junit-platform-engine.version}</version>
                <scope>test</scope>
            </dependency>
            <dependency>
                <groupId>io.cucumber</groupId>
                <artifactId>cucumber-junit-platform-engine</artifactId>
                <version>${cucumber-junit-platform-engine.version}</version>
                <scope>test</scope>
            </dependency>

            <!-- Mockito -->
            <dependency>
                <groupId>org.mockito</groupId>
                <artifactId>mockito-core</artifactId>
                <version>${mockito-core.version}</version>
                <scope>test</scope>
            </dependency>

            <!-- https://mvnrepository.com/artifact/org.assertj/assertj-core -->
            <dependency>
                <groupId>org.assertj</groupId>
                <artifactId>assertj-core</artifactId>
                <version>${assertj-core.version}</version>
                <scope>test</scope>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <build>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-surefire-plugin</artifactId>
                    <version>${maven-surefire-plugin.version}</version>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-failsafe-plugin</artifactId>
                    <version>${maven-surefire-plugin.version}</version>
                </plugin>
                <plugin>
                    <groupId>org.springframework.boot</groupId>
                    <artifactId>spring-boot-maven-plugin</artifactId>
                    <version>${spring-boot.version}</version>
                </plugin>
            </plugins>
        </pluginManagement>
        <plugins>
            <plugin>
                <groupId>org.jacoco</groupId>
                <artifactId>jacoco-maven-plugin</artifactId>
                <version>${jacoco-maven-plugin.version}</version>
                <executions>
                    <execution>
                        <goals>
                            <goal>prepare-agent</goal>
                        </goals>
                    </execution>
                    <execution>
                        <id>report</id>
                        <phase>test</phase>
                        <goals>
                            <goal>report</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>
</project>